[project]
name = "astro-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "boto3>=1.42.9",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "python-dotenv>=1.2.1",
    "python-logging-loki>=0.3.1",
    "sqlalchemy>=1.4,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
